--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   db:
     container_name: postgres
-    image: postgres:14.1
+    image: postgres:14.5
     environment:
-      POSTGRES_USER:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
     volumes:
