Add GitHub-Workflow CD - Backend

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,9 +1,11 @@
-name: CI - Build - bakcend
+name: CI - Build - Backend
 on:
   # Label of the container job
   pull_request:
     branches:
       - main
+
+    #Whe want to observe for any changes under backend folder
     paths:
       - backend/**/**
 jobs:
@@ -34,7 +36,11 @@ jobs:
          run:
            working-directory: ./backend
     steps:
-      - uses: actions/checkout@v3step
+      #This action will check out the entire application, our entire code
+      #Into the linux runner
+      - uses: actions/checkout@v3
+
+      #Set up java
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
