--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -21,6 +21,7 @@
 		<java.version>17</java.version>
 		<docker.username>bladimirg</docker.username>
 		<docker.image.name>spring-boot-app</docker.image.name>
+		<docker.image.tag/>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -171,7 +172,7 @@
 						</platforms>
 					</from>
 					<to>
-						<image>docker.io/${docker.username}/${docker.image.name}:${project.version}</image>
+						<image>docker.io/${docker.username}/${docker.image.name}:${docker.image.tag}</image>
 						<tags>
 							<tag>latest</tag>
 						</tags>
